<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/img_screen_sketch_1"
	android:gravity="center">
	
		<Button android:id="@+id/btn_newgame"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_new_game"
			android:background="@drawable/xml_btn_style" />
			
		<Button android:id="@+id/btn_loadgame"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_load_game"
			android:background="@drawable/xml_btn_style" />
		
		<LinearLayout 
		    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:orientation="horizontal">
			
		    <ImageButton android:id="@+id/btn_config"
				android:src="@drawable/ico_settings"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_config"
				android:background="@drawable/xml_btn_style" />
			
			<ImageButton android:id="@+id/btn_help"
				android:src="@drawable/ico_help"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_help"
				android:background="@drawable/xml_btn_style" />
		    
		</LinearLayout>
			
		<Button android:id="@+id/btn_exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_dialog_positive"
			android:background="@drawable/xml_btn_style" />
		
</LinearLayout>