<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/xml_border"
	android:gravity="center">
	
	<TextView 
		android:id="@+id/txtSettingsLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="@dimen/title_size"
		android:text="@string/label_settings"
		android:paddingBottom="@dimen/small_padding_size"/>
			
	<SeekBar
		android:id="@+id/sbVolume"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
		
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<Button
			android:id="@+id/btnSettingsAccept"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_accept" />
			
		<Button
			android:id="@+id/btnSettingsCancel" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_cancel"/>
	</LinearLayout>
</LinearLayout>