<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/xml_border"
	android:gravity="center">
	
		<Button android:id="@+id/btn_resume"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_resume"
			android:background="@drawable/xml_btn_style" />
			
		<ImageButton android:id="@+id/btn_config"
			android:src="@drawable/ico_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_config"
			android:background="@drawable/xml_btn_style" />
		
		<ImageButton android:id="@+id/btn_help"
			android:src="@drawable/ico_help"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_help"
			android:background="@drawable/xml_btn_style" />
			
		<Button android:id="@+id/btn_exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_dialog_positive"
			android:background="@drawable/xml_btn_style" />
		
</LinearLayout>