<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/left_zone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/padding_size"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgIslandLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/txtr_island"
                android:contentDescription="@string/icd_btn_island" />

            <ImageButton
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/ico_arrow_left"
                android:contentDescription="@string/icd_btn_arrow" >
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/front_zone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/padding_size"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgIslandFront"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/txtr_island"
                android:contentDescription="@string/icd_btn_island" />

            <ImageButton
                android:id="@+id/btnFront"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/ico_arrow_front"
                android:contentDescription="@string/icd_btn_arrow" >
            </ImageButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_zone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/padding_size"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgIslandRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/txtr_island"
                android:contentDescription="@string/icd_btn_island" />

            <ImageButton
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/ico_arrow_right"
                android:contentDescription="@string/icd_btn_arrow" >
            </ImageButton>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtScreenSelectionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/large_padding_size"
        android:text="@string/message_screenselection_detail"
        android:textSize="@dimen/title_size"
        android:background="@drawable/xml_border" />
</LinearLayout>